--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ConexaoPadrao": "COLOCAR SUA CONNECTION STRING AQUI"
+    "ConexaoPadrao": "Server=BR-003042-NB\\BUSINESSSERVER;Database=Tarefas;User Id=sa;Password=Z1la^ZuAH8TxV42oYXd1URwIy;TrustServerCertificate=True;"
   }
 }
